--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,4 +121,5 @@ body{
     border-width: 2px;
     border-radius: 9px;
     background-image: url(/assets/images/background\ purple.jpg);
+    display: inline;
 }
