--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,3 +196,40 @@ body{
     from{transform: translateX(-1000px);}
     100%{transform: translateX(2000px);}
 }
+
+.calculator{
+    background-image: url(/assets/images/background_green.jpg);
+    border-style: solid;
+    border-radius: 10px;
+    width: 300px;
+    height: 350px;
+    padding: 10px;
+    margin: auto;
+    align-items: center;
+}
+
+.c_button{
+    width: 50px;
+    height: 50px;
+    font-size: 2em;
+    background-image: url(/assets/images/background_blue.webp);
+    border-width: 1px;
+}
+.c_button:hover{
+    background-image: url(/assets/images/background\ purple.jpg);
+}
+.c_row{
+    padding-top: 10px ;
+    display: block;
+    margin: auto;
+    
+}
+
+#c_in{
+    margin-top: 30px;
+    background-image: url(/assets/images/background_blue.webp);
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 2px;
+    height: 25px;
+}
