--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,3 +256,40 @@ body{
     background-image: url(/assets/images/background\ purple.jpg);
 }
 
+.review{
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 2px;
+    background-image: url(/assets/images/background_blue.webp);
+    height: 50px;
+    box-shadow: 3px 3px 3px;
+    width: 230px;
+    display: inline-block;
+    margin: auto;
+    padding: 4px;
+}
+
+#review_icon{
+    height: 50px;
+    display: inline;
+    position: absolute;
+    transform: translateX(-50px);
+}
+
+
+.review_link{
+    cursor: pointer;
+    font-family: "Comic",Arial;
+    text-decoration: none;
+    color: black;
+}
+
+.review_link:hover{
+    font-size: 1.1em;
+    font-family: "Comic",Arial;
+}
+
+.review_link:visited{
+    color: blue;
+    font-family: "Comic",Arial;
+}
